# LLMs-Prisoners-Dilemma-Tournaments

./: .gitignore  README.md  analyze_subpools.py  interpret_results.py  main.tex  pyproject.toml
configs/: default.json  simple_pd.json  simple_pd_communication.json  simple_pd_communication_run2.json  simple_pd_communication_run3.json  simple_pd_fake_reputation.json  simple_pd_fake_starvation.json
logs/: match_cache.json  simple_pd_tournament_20260620_201010.json  simple_pd_tournament_20260620_201010.txt  simple_pd_tournament_20260620_201638.json  simple_pd_tournament_20260620_201638.txt  simple_pd_tournament_20260620_202240.json  simple_pd_tournament_20260620_202240.txt  simple_pd_tournament_20260620_203622.json  simple_pd_tournament_20260620_203622.txt  simple_pd_tournament_20260620_221023.json  simple_pd_tournament_20260620_221023.txt  simple_pd_tournament_20260620_221541.txt  simple_pd_tournament_20260620_222312.txt  simple_pd_tournament_20260620_222346.txt  simple_pd_tournament_20260620_223803.txt  simple_pd_tournament_20260620_232458.json  simple_pd_tournament_20260620_232458.txt  simple_pd_tournament_20260620_232531.json  simple_pd_tournament_20260620_232531.txt  simple_pd_tournament_20260620_232731.txt  simple_pd_tournament_20260620_235828.txt  simple_pd_tournament_20260621_000237.txt  simple_pd_tournament_20260621_011250.json  simple_pd_tournament_20260621_011250.txt  simple_pd_tournament_20260621_011454.json  simple_pd_tournament_20260621_011454.txt  simple_pd_tournament_20260621_081531.json  simple_pd_tournament_20260621_081531.txt  (+18 more)
tests/: test_simple_pd.py  (+1 more)
(+39 files in other folders)
